Added warapper for mongo

--- a/.NET Projects 2017/Moviemarathon/src/MongoDbTests/project.json
+++ b/.NET Projects 2017/Moviemarathon/src/MongoDbTests/project.json
@@ -1,15 +1,17 @@
-﻿{
+{
   "version": "1.0.0-*",
 
   "dependencies": {
+    "ConsoleApp1": "1.0.0-*",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
     },
-    "MongoDB.Bson": "2.4.3",
-    "MongoDB.Driver": "2.4.3"
+    "System.Runtime.Serialization.Primitives": "4.3.0",
+    "xunit": "2.2.0-*",
+    "dotnet-test-xunit": "2.2.0-*"
   },
-
+  "testRunner": "xunit",
   "frameworks": {
     "netcoreapp1.0": {
       "imports": "dnxcore50"
