--- a/.NET Projects 2017/Moviemarathon/src/Moviemarathon/project.json
+++ b/.NET Projects 2017/Moviemarathon/src/Moviemarathon/project.json
@@ -21,7 +21,9 @@
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
-    "MongoDbWrapper": "1.0.0-*"
+    "MongoDbWrapper": "1.0.0-*",
+    "MongoDB.Driver": "2.4.3",
+    "MongoDB.Bson": "2.4.3"
   },
 
   "tools": {
