--- a/.NET Projects 2017/Moviemarathon/MongoTests/MongoTests.csproj
+++ b/.NET Projects 2017/Moviemarathon/MongoTests/MongoTests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="BsonDocuemtnTests.cs" />
     <Compile Include="PocoTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RentalTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
