Added petapoco and tested db connection

--- a/.NET Projects 2017/KnowledgeBasement/KnowledgeBasement.Web/appsettings.json
+++ b/.NET Projects 2017/KnowledgeBasement/KnowledgeBasement.Web/appsettings.json
@@ -6,5 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "AzureConnection": "Server=tcp:vguleaevdatabase.database.windows.net,1433;Initial Catalog=knowledgebasementdb;Persist Security Info=False;User ID=vguleaev;Password=Databasepass1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=knowledgebasementdb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
