--- a/.NET Projects 2017/KnowledgeBasement/KnowledgeBasement.Persistence/project.json
+++ b/.NET Projects 2017/KnowledgeBasement/KnowledgeBasement.Persistence/project.json
@@ -1,11 +1,12 @@
-﻿{
+{
   "version": "1.0.0-*",
 
   "dependencies": {
     "Microsoft.NETCore.App": {
       "version": "1.0.1",
       "type": "platform"
-    }
+    },
+    "PetaPoco.NetCore": "1.0.1"
   },
 
   "frameworks": {
