--- a/.NET Projects 2017/KnowledgeBasement/KnowledgeBasement.Persistence/project.json
+++ b/.NET Projects 2017/KnowledgeBasement/KnowledgeBasement.Persistence/project.json
@@ -2,6 +2,7 @@
   "version": "1.0.0-*",
 
   "dependencies": {
+    "Microsoft.Extensions.Options": "1.1.1",
     "Microsoft.NETCore.App": {
       "version": "1.0.1",
       "type": "platform"
